--- a/src/components/layout.module.css
+++ b/src/components/layout.module.css
@@ -18,3 +18,10 @@
 .nav-link-text {
   color: black;
 }
+
+.site-title {
+  font-size: 3rem;
+  color: grey;
+  font-weight: 600;
+  margin: 3rem 0;
+}
